# flask-restfulapi

./: README.md  app.py  config.py  pyproject.toml
api/resources/: user.py
models/: users.py
